--- a/firmware/mallard/Debug/makefile
+++ b/firmware/mallard/Debug/makefile
@@ -65,8 +65,8 @@ all: main-build
 main-build: mallard.elf secondary-outputs
 
 # Tool invocations
-mallard.elf: $(OBJS) $(USER_OBJS) C:\Users\njlb3\Documents\GitHub\mallard\firmware\mallard\STM32L496ZGTXP_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "mallard.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Users\njlb3\Documents\GitHub\mallard\firmware\mallard\STM32L496ZGTXP_FLASH.ld" --specs=nosys.specs -Wl,-Map="mallard.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+mallard.elf: $(OBJS) $(USER_OBJS) F:\electricalDesignProjects\mallard\firmware\mallard\STM32L496ZGTXP_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-gcc -o "mallard.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"F:\electricalDesignProjects\mallard\firmware\mallard\STM32L496ZGTXP_FLASH.ld" --specs=nosys.specs -Wl,-Map="mallard.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
