Expanded firmware to activate regulators and output UART

--- a/firmware/mallard/Debug/makefile
+++ b/firmware/mallard/Debug/makefile
@@ -10,7 +10,6 @@ RM := rm -rf
 # All of the sources participating in the build are defined here
 -include sources.mk
 -include USB_HOST/Target/subdir.mk
--include USB_HOST/App/subdir.mk
 -include Middlewares/Third_Party/FatFs/src/option/subdir.mk
 -include Middlewares/Third_Party/FatFs/src/subdir.mk
 -include Middlewares/ST/STM32_USB_Host_Library/Core/Src/subdir.mk
@@ -68,8 +67,8 @@ all: main-build
 main-build: mallard.elf secondary-outputs
 
 # Tool invocations
-mallard.elf: $(OBJS) $(USER_OBJS) C:\Users\njlb3\Documents\GitHub\mallard\firmware\mallard\STM32L4Q5CGTX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "mallard.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Users\njlb3\Documents\GitHub\mallard\firmware\mallard\STM32L4Q5CGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="mallard.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+mallard.elf: $(OBJS) $(USER_OBJS) F:\electricalDesignProjects\mallard\firmware\mallard\STM32L4Q5CGTX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-gcc -o "mallard.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"F:\electricalDesignProjects\mallard\firmware\mallard\STM32L4Q5CGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="mallard.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
